// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseCaseFactory should create an instance of all use cases 1`] = `
LoggerCommandDecorator {
  "decoratedCommand": GetArticle {
    "articlesRepository": ArticlesFileRepository {
      "fileLoader": FileLoader {},
      "translationService": TranslationService {
        "translator": Translator {
          "translations": Array [
            Array [
              1,
              Array [
                Array [
                  "_theme",
                  "Tema",
                ],
                Array [
                  "_language",
                  "Idioma",
                ],
                Array [
                  "_en",
                  "Inglés",
                ],
                Array [
                  "_es",
                  "Español",
                ],
                Array [
                  "_dark",
                  "Oscuro",
                ],
                Array [
                  "_light",
                  "Claro",
                ],
                Array [
                  "home_title",
                  "Inicio",
                ],
                Array [
                  "home_recentArticles",
                  "Artículos recientes",
                ],
                Array [
                  "article_title",
                  "Artículos",
                ],
                Array [
                  "about_title",
                  "Acerca de mí",
                ],
                Array [
                  "about_description",
                  "I'm a young programmer very interested in good practices, architecture, testing and SOLID principles. I work at [Autentia](https://www.autentia.com/) as a frontend developer (Vue, React, TypeScript, JavaScript, HTML, CSS, etc) although I have worked a bit in Java and Android. I'm continuously on the lookout for things to read, learn and [share](https://www.adictosaltrabajo.com/author/calberca/). I've talked at [JSDay Madrid](https://www.youtube.com/watch?v=aNf1Oos0ZB8&t=1s), Codenares 2018 and 2019, [Ritsi](https://www.youtube.com/watch?v=SuykoyC0T74&t=1s) and several internal talks at my company, like [this one](https://www.youtube.com/watch?v=RFQy-ud8Ec4&t=4477s).",
                ],
                Array [
                  "talks_title",
                  "Charlas",
                ],
                Array [
                  "talks_talkTitle",
                  "Title",
                ],
                Array [
                  "talks_talkAbstract",
                  "Descripción",
                ],
                Array [
                  "talks_talkTopics",
                  "Temas",
                ],
                Array [
                  "talks_talkDifficulty",
                  "Dificultad",
                ],
                Array [
                  "talks_talkLength",
                  "Duración",
                ],
                Array [
                  "talks_talkDifficultyAdvanced",
                  "Avanzado",
                ],
                Array [
                  "talks_talkDifficultyIntermediate",
                  "Intermedio",
                ],
                Array [
                  "talks_talkDifficultyEasy",
                  "Iniciado",
                ],
              ],
            ],
            Array [
              0,
              Array [
                Array [
                  "_theme",
                  "Theme",
                ],
                Array [
                  "_language",
                  "Language",
                ],
                Array [
                  "_en",
                  "English",
                ],
                Array [
                  "_es",
                  "Spanish",
                ],
                Array [
                  "_dark",
                  "Dark",
                ],
                Array [
                  "_light",
                  "Light",
                ],
                Array [
                  "home_title",
                  "Home",
                ],
                Array [
                  "home_recentArticles",
                  "Recent articles",
                ],
                Array [
                  "article_title",
                  "Articles",
                ],
                Array [
                  "about_title",
                  "About me",
                ],
                Array [
                  "about_description",
                  "I'm a young programmer very interested in good practices, architecture, testing and SOLID principles. I work at [Autentia](https://www.autentia.com/) as a frontend developer (Vue, React, TypeScript, JavaScript, HTML, CSS, etc) although I have worked a bit in Java and Android. I'm continuously on the lookout for things to read, learn and [share](https://www.adictosaltrabajo.com/author/calberca/). I've talked at [JSDay Madrid](https://www.youtube.com/watch?v=aNf1Oos0ZB8&t=1s), Codenares 2018 and 2019, [Ritsi](https://www.youtube.com/watch?v=SuykoyC0T74&t=1s) and several internal talks at my company, like [this one](https://www.youtube.com/watch?v=RFQy-ud8Ec4&t=4477s).",
                ],
                Array [
                  "talks_title",
                  "Talks",
                ],
                Array [
                  "talks_talkTitle",
                  "Title",
                ],
                Array [
                  "talks_talkAbstract",
                  "Abstract",
                ],
                Array [
                  "talks_talkTopics",
                  "Topics",
                ],
                Array [
                  "talks_talkDifficulty",
                  "Difficulty",
                ],
                Array [
                  "talks_talkLength",
                  "Length",
                ],
                Array [
                  "talks_talkDifficultyAdvanced",
                  "Advanced",
                ],
                Array [
                  "talks_talkDifficultyIntermediate",
                  "Intermediate",
                ],
                Array [
                  "talks_talkDifficultyEasy",
                  "Beginner",
                ],
              ],
            ],
          ],
        },
      },
    },
    "id": 1,
    "locale": 0,
  },
  "logger": Logger {
    "stdout": Object {
      "error": [Function],
      "info": [Function],
      "warn": [Function],
    },
  },
}
`;

exports[`UseCaseFactory should create an instance of all use cases 2`] = `
LoggerCommandDecorator {
  "decoratedCommand": GetAllArticles {
    "articlesRepository": ArticlesFileRepository {
      "fileLoader": FileLoader {},
      "translationService": TranslationService {
        "translator": Translator {
          "translations": Array [
            Array [
              1,
              Array [
                Array [
                  "_theme",
                  "Tema",
                ],
                Array [
                  "_language",
                  "Idioma",
                ],
                Array [
                  "_en",
                  "Inglés",
                ],
                Array [
                  "_es",
                  "Español",
                ],
                Array [
                  "_dark",
                  "Oscuro",
                ],
                Array [
                  "_light",
                  "Claro",
                ],
                Array [
                  "home_title",
                  "Inicio",
                ],
                Array [
                  "home_recentArticles",
                  "Artículos recientes",
                ],
                Array [
                  "article_title",
                  "Artículos",
                ],
                Array [
                  "about_title",
                  "Acerca de mí",
                ],
                Array [
                  "about_description",
                  "I'm a young programmer very interested in good practices, architecture, testing and SOLID principles. I work at [Autentia](https://www.autentia.com/) as a frontend developer (Vue, React, TypeScript, JavaScript, HTML, CSS, etc) although I have worked a bit in Java and Android. I'm continuously on the lookout for things to read, learn and [share](https://www.adictosaltrabajo.com/author/calberca/). I've talked at [JSDay Madrid](https://www.youtube.com/watch?v=aNf1Oos0ZB8&t=1s), Codenares 2018 and 2019, [Ritsi](https://www.youtube.com/watch?v=SuykoyC0T74&t=1s) and several internal talks at my company, like [this one](https://www.youtube.com/watch?v=RFQy-ud8Ec4&t=4477s).",
                ],
                Array [
                  "talks_title",
                  "Charlas",
                ],
                Array [
                  "talks_talkTitle",
                  "Title",
                ],
                Array [
                  "talks_talkAbstract",
                  "Descripción",
                ],
                Array [
                  "talks_talkTopics",
                  "Temas",
                ],
                Array [
                  "talks_talkDifficulty",
                  "Dificultad",
                ],
                Array [
                  "talks_talkLength",
                  "Duración",
                ],
                Array [
                  "talks_talkDifficultyAdvanced",
                  "Avanzado",
                ],
                Array [
                  "talks_talkDifficultyIntermediate",
                  "Intermedio",
                ],
                Array [
                  "talks_talkDifficultyEasy",
                  "Iniciado",
                ],
              ],
            ],
            Array [
              0,
              Array [
                Array [
                  "_theme",
                  "Theme",
                ],
                Array [
                  "_language",
                  "Language",
                ],
                Array [
                  "_en",
                  "English",
                ],
                Array [
                  "_es",
                  "Spanish",
                ],
                Array [
                  "_dark",
                  "Dark",
                ],
                Array [
                  "_light",
                  "Light",
                ],
                Array [
                  "home_title",
                  "Home",
                ],
                Array [
                  "home_recentArticles",
                  "Recent articles",
                ],
                Array [
                  "article_title",
                  "Articles",
                ],
                Array [
                  "about_title",
                  "About me",
                ],
                Array [
                  "about_description",
                  "I'm a young programmer very interested in good practices, architecture, testing and SOLID principles. I work at [Autentia](https://www.autentia.com/) as a frontend developer (Vue, React, TypeScript, JavaScript, HTML, CSS, etc) although I have worked a bit in Java and Android. I'm continuously on the lookout for things to read, learn and [share](https://www.adictosaltrabajo.com/author/calberca/). I've talked at [JSDay Madrid](https://www.youtube.com/watch?v=aNf1Oos0ZB8&t=1s), Codenares 2018 and 2019, [Ritsi](https://www.youtube.com/watch?v=SuykoyC0T74&t=1s) and several internal talks at my company, like [this one](https://www.youtube.com/watch?v=RFQy-ud8Ec4&t=4477s).",
                ],
                Array [
                  "talks_title",
                  "Talks",
                ],
                Array [
                  "talks_talkTitle",
                  "Title",
                ],
                Array [
                  "talks_talkAbstract",
                  "Abstract",
                ],
                Array [
                  "talks_talkTopics",
                  "Topics",
                ],
                Array [
                  "talks_talkDifficulty",
                  "Difficulty",
                ],
                Array [
                  "talks_talkLength",
                  "Length",
                ],
                Array [
                  "talks_talkDifficultyAdvanced",
                  "Advanced",
                ],
                Array [
                  "talks_talkDifficultyIntermediate",
                  "Intermediate",
                ],
                Array [
                  "talks_talkDifficultyEasy",
                  "Beginner",
                ],
              ],
            ],
          ],
        },
      },
    },
    "locale": 0,
  },
  "logger": Logger {
    "stdout": Object {
      "error": [Function],
      "info": [Function],
      "warn": [Function],
    },
  },
}
`;

exports[`UseCaseFactory should create an instance of all use cases 3`] = `
LoggerCommandDecorator {
  "decoratedCommand": GetTalksGiven {
    "locale": 0,
    "talksRepository": TalksFileRepository {
      "fileLoader": FileLoader {},
      "translationService": TranslationService {
        "translator": Translator {
          "translations": Array [
            Array [
              1,
              Array [
                Array [
                  "_theme",
                  "Tema",
                ],
                Array [
                  "_language",
                  "Idioma",
                ],
                Array [
                  "_en",
                  "Inglés",
                ],
                Array [
                  "_es",
                  "Español",
                ],
                Array [
                  "_dark",
                  "Oscuro",
                ],
                Array [
                  "_light",
                  "Claro",
                ],
                Array [
                  "home_title",
                  "Inicio",
                ],
                Array [
                  "home_recentArticles",
                  "Artículos recientes",
                ],
                Array [
                  "article_title",
                  "Artículos",
                ],
                Array [
                  "about_title",
                  "Acerca de mí",
                ],
                Array [
                  "about_description",
                  "I'm a young programmer very interested in good practices, architecture, testing and SOLID principles. I work at [Autentia](https://www.autentia.com/) as a frontend developer (Vue, React, TypeScript, JavaScript, HTML, CSS, etc) although I have worked a bit in Java and Android. I'm continuously on the lookout for things to read, learn and [share](https://www.adictosaltrabajo.com/author/calberca/). I've talked at [JSDay Madrid](https://www.youtube.com/watch?v=aNf1Oos0ZB8&t=1s), Codenares 2018 and 2019, [Ritsi](https://www.youtube.com/watch?v=SuykoyC0T74&t=1s) and several internal talks at my company, like [this one](https://www.youtube.com/watch?v=RFQy-ud8Ec4&t=4477s).",
                ],
                Array [
                  "talks_title",
                  "Charlas",
                ],
                Array [
                  "talks_talkTitle",
                  "Title",
                ],
                Array [
                  "talks_talkAbstract",
                  "Descripción",
                ],
                Array [
                  "talks_talkTopics",
                  "Temas",
                ],
                Array [
                  "talks_talkDifficulty",
                  "Dificultad",
                ],
                Array [
                  "talks_talkLength",
                  "Duración",
                ],
                Array [
                  "talks_talkDifficultyAdvanced",
                  "Avanzado",
                ],
                Array [
                  "talks_talkDifficultyIntermediate",
                  "Intermedio",
                ],
                Array [
                  "talks_talkDifficultyEasy",
                  "Iniciado",
                ],
              ],
            ],
            Array [
              0,
              Array [
                Array [
                  "_theme",
                  "Theme",
                ],
                Array [
                  "_language",
                  "Language",
                ],
                Array [
                  "_en",
                  "English",
                ],
                Array [
                  "_es",
                  "Spanish",
                ],
                Array [
                  "_dark",
                  "Dark",
                ],
                Array [
                  "_light",
                  "Light",
                ],
                Array [
                  "home_title",
                  "Home",
                ],
                Array [
                  "home_recentArticles",
                  "Recent articles",
                ],
                Array [
                  "article_title",
                  "Articles",
                ],
                Array [
                  "about_title",
                  "About me",
                ],
                Array [
                  "about_description",
                  "I'm a young programmer very interested in good practices, architecture, testing and SOLID principles. I work at [Autentia](https://www.autentia.com/) as a frontend developer (Vue, React, TypeScript, JavaScript, HTML, CSS, etc) although I have worked a bit in Java and Android. I'm continuously on the lookout for things to read, learn and [share](https://www.adictosaltrabajo.com/author/calberca/). I've talked at [JSDay Madrid](https://www.youtube.com/watch?v=aNf1Oos0ZB8&t=1s), Codenares 2018 and 2019, [Ritsi](https://www.youtube.com/watch?v=SuykoyC0T74&t=1s) and several internal talks at my company, like [this one](https://www.youtube.com/watch?v=RFQy-ud8Ec4&t=4477s).",
                ],
                Array [
                  "talks_title",
                  "Talks",
                ],
                Array [
                  "talks_talkTitle",
                  "Title",
                ],
                Array [
                  "talks_talkAbstract",
                  "Abstract",
                ],
                Array [
                  "talks_talkTopics",
                  "Topics",
                ],
                Array [
                  "talks_talkDifficulty",
                  "Difficulty",
                ],
                Array [
                  "talks_talkLength",
                  "Length",
                ],
                Array [
                  "talks_talkDifficultyAdvanced",
                  "Advanced",
                ],
                Array [
                  "talks_talkDifficultyIntermediate",
                  "Intermediate",
                ],
                Array [
                  "talks_talkDifficultyEasy",
                  "Beginner",
                ],
              ],
            ],
          ],
        },
      },
    },
  },
  "logger": Logger {
    "stdout": Object {
      "error": [Function],
      "info": [Function],
      "warn": [Function],
    },
  },
}
`;
